# KURSE-n3---SQL

./: .gitignore  README.md  config.py  database.ini  database_example.ini  main.py  pyproject.toml  znachki.py
data/: vacancy_hh.json
src/: api_class.py  api_loader.py  database.py  db_manager.py  utils.py
