[project]
name = "kurs-3-sql-bd"
version = "0.1.0"
description = ""
authors = [
    {name = "StreetShiffter",email = "agwzdushaz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

psycopg2 = "^2.9"
[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
isort = "^6.0.1"
black = "^25.1.0"

[tool.black]
line-length = 119
exclude = '''
/(
    \.venv
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.pytest_cache
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
# Игнорирование ошибок
ignore_missing_imports = true          # Игнорировать отсутствующие импорты (например, psycopg2)
allow_untyped_calls = true             # Разрешить вызовы функций без type hints
allow_untyped_defs = true              # Разрешить определение функций без type hints
disallow_any_returns = false            # Не ругаться на Any в return
warn_return_any = false                 # Не предупреждать о возврате Any
warn_unused_configs = true             # Предупреждать об unused конфигах

# Полезные проверки (можно включить постепенно)
no_implicit_optional = true            # Явно указывать Optional для аргументов

# Исключения (не проверять эти директории/файлы)
exclude = [
    "^.venv/",
    "^.mypy_cache/",
    "^build/",
    "^dist/"
]

[tool.isort]
line_length = 119
skip = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.flake8]
max-line-length = 119